bug: [PagoPA-1935] - order error (#79)
* [PAGOPA-1935] first impl

* [PAGOPA-1935] amount and fee fix

---------

Co-authored-by: pagopa-github-bot <github-bot@pagopa.it>
Co-authored-by: aacitelli <aacitelli@PDD-NB-0205.dgsgroup.it>